@@ -29,6 +29,8 @@
   fix race with new jobs reporting wrong walltime (USC)
   sister moms weren't setting job state to "running" (USC)
   don't reject jobs if requested nodes is too large node_pack=T (USC)
+  add epilogue.parallel and epilogue.user.parallel (SARA)
+  add $PBS_NODENUM, $PBS_MSHOST, and $PBS_NODEFILE to pelogs (USC)
 
 
 2.0.0p7
